  . Adjust bcround()'s $mode parameter to only accept the RoundingMode
    enum. (timwolla, saki)

- DOM:
  . Fix trampoline leak in xpath callables. (nielsdos)
  . Throw instead of silently failing when creating a too long text node in
    (DOM)ParentNode and (DOM)ChildNode. (nielsdos)

- FPM:
  . /dev/poll events.mechanism for Solaris/Illumos setting had been retired.
    (David Carlier)

- Intl:
  . Added SpoofChecker::setAllowedChars to set unicode chars ranges.
    (David Carlier)
  . Fixed bug GH-15087 (IntlChar::foldCase()'s $option is not optional). (cmb)

- Opcache:
  . Fixed bug GH-13775 (Memory leak possibly related to opcache SHM placement).
    (Arnaud)

- OpenSSL:
  . Bumped minimum required OpenSSL version to 1.1.0. (cmb)

- PDO_FIREBIRD:
  . Added Pdo\Firebird::ATTR_API_VERSION. (SakiTakamachi)
  . Added getApiVersion() and removed from getAttribute().
    (SakiTakamachi)
  . Supported Firebird 4.0 datatypes. (sim1984)

- PGSQL:
  . pg_convert/pg_insert/pg_update/pg_delete ; regexes are now cached.
    (David Carlier)

- Random:
  . Fixed bug GH-15094 (php_random_default_engine() is not C++ conforming).
    (cmb)

- Standard:
  . Fix references in request_parse_body() options array. (nielsdos)
  . Add RoundingMode enum. (timwolla, saki)

- Tidy:
  . Failures in the constructor now throw exceptions rather than emitting
    warnings and having a broken object. (nielsdos)
  . Add tidyNode::getNextSibling() and tidyNode::getPreviousSibling().
    (nielsdos)

- XSL:
  . Fix trampoline leak in xpath callables. (nielsdos)

18 Jul 2024, PHP 8.4.0alpha2

- Core:
  . Fixed bug GH-14801 (Fix build for armv7). (andypost)
  . Implemented property hooks RFC. (ilutov)

- DOM:
  . Improve support for template elements. (nielsdos)

- GD:
  . Check overflow/underflow for imagescale/imagefilter. (David Carlier)

- LibXML:
  . Added LIBXML_NO_XXE constant. (nielsdos)

- Opcache:
  . Fixed bug GH-14873 (PHP 8.4 min function fails on typed integer).
    (nielsdos)
